docs/v2.3.6.29/_sources/gallery/single/scatterer/properties.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/single/scatterer/properties.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_single_scatterer_properties.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_single_scatterer_properties.py:


Print properties
================

This example demonstrates the computation of scattering properties using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: Python

    from PyMieSim.single.scatterer import Cylinder
    from PyMieSim.single.source import Gaussian
    from PyMieSim.units import nanometer, degree, watt, AU, RIU
    from PyOptik import Material








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Defining the source

.. GENERATED FROM PYTHON SOURCE LINES 17-24

.. code-block:: Python

    source = Gaussian(
        wavelength=750 * nanometer,  # 750 nm
        polarization=30 * degree,  # Right circular polarization
        optical_power=1 * watt,  # Power in watt
        NA=0.3 * AU  # Numerical Aperture
    )








.. GENERATED FROM PYTHON SOURCE LINES 25-26

Defining the scatterer

.. GENERATED FROM PYTHON SOURCE LINES 26-34

.. code-block:: Python

    scatterer = Cylinder(
        diameter=300 * nanometer,  # 300 nm
        source=source,
        property=(1.4 + 0.1j) * RIU,
        medium_property=Material.water
    )

    scatterer.print_properties()




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Property        Value
    --------------  ----------------------
    size_parameter  1.2566370614359172
    area            300000.00000000006 µm²
    g               0.37557408799482683
    Qsca            0.023186330283701
    Qext            0.25098397196276695
    Qabs            0.22779764167906594
    Csca            6955.899085110302 µm²
    Cext            75295.1915888301 µm²
    Cabs            68339.2925037198 µm²





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.085 seconds)


.. _sphx_glr_download_gallery_single_scatterer_properties.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: properties.ipynb <properties.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: properties.py <properties.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: properties.zip <properties.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
